# unictl

./: README.md  aliases.sh  hello.py  pyproject.toml
dev/: bootstrap-es.sh  elasticsearch.md
src/unictl/: __init__.py  main.py
