[project]
name = "unictl-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
unictl = { workspace = true }
plugin-elasticsearch = { workspace = true }
